pom: require Java-11 at compile and run time
Motivation:
Keep up with the times.

Modification:
update pom to require java 11 at the build time. Update
dcache startup script to except java 11 at runtime.

Result:
The new java 9,10 and 11 functionality can be used with dCache.

Acked-by: Paul Millar
Acked-by: Lea Morschel
Target: master
Require-book: no
Require-notes: yes